--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-  <title>Our Company</title>
+  <title>Homepage</title>
   <link href="site.css" rel="stylesheet">
 </head>
 
