--- a/index.html
+++ b/index.html
@@ -2,27 +2,55 @@
 <html lang="zh-CN">
 
 <head>
-  <title>Our Company</title>
-  <link href="site.css" rel="stylesheet">
+  <title>Homepage</title>
+  <link href="homepage.css" rel="stylesheet">
 </head>
 
 <body>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div id="book">
-<h1 align="center"><em>Linda Yang</em></h1>
-<h4 align="center">摄影师    作者</h4><br>
-<table width="100%" align="center"><tr><th>
-<img src="book cover-book.jpg" alt="诗词集" width="60%" align="center"></th>
-<th><img src="book cover-gallery.jpg" alt="画册" width="60%" align="center"></th></tr></table>
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0;
+user-scalable=no">
+
+<div class="head_child">
+<h1><b><a href="https://chining.github.io/lindayang/">Linda Yang</a></b></h1>
 </div>
-  
-<div id="footer">
+
+
+
+<div class="transbox">
+<nav>
+  <ul>
+    <li><b><a href="https://chining.github.io/lindayang/">最新上架</a></b></li>
+    <br><br><br>
+    <li><b><a href="#">诗词集</a></b></li>
+    <br><br><br>
+    <li><b><a href="#">相册</a></b></li>
+    <br><br><br>
+    <li><b><a href="#">关于作者</a></b></li>
+    <br><br><br>
+    <li><b><a href="http://chining.github.io/lindayang/contact us/">联系我们</a></b></li>
+  </ul>
+</nav>
+
+</div>
+
+<article>
+<table>
+<tr><td><img src="DSCN0208.JPG" width="225" height="225"></td>
+    <td><img src="DSCN0208.JPG" width="225" height="225"></td>
+    <td><img src="DSCN0208.JPG" width="225" height="225"></td>
+</tr>
+<tr><td><img src="DSCN0208.JPG" width="225" height="225"></td>
+    <td><img src="DSCN0208.JPG" width="225" height="225"></td>
+    <td><img src="DSCN0208.JPG" width="225" height="225"></td>
+</tr>
+</table>
+</article>
+
 <footer>
 <hr>
-<p align="center">Copyright &copy; 2016</p>
-<p align="center">All rights reserved by Linda Yang. For personal use only.</p>
-</footer></div>
+<p align="center">Copyright &copy; 2016. All rights reserved by Linda Yang. For personal use only.</p>
+</footer>
 
 </body>
 </html>
