--- a/contact us/index.html
+++ b/contact us/index.html
@@ -20,11 +20,9 @@ user-scalable=no">
   <ul>
     <li><b><a href="https://chining.github.io/lindayang/">最新上架</a></b></li>
     <br><br><br>
-    <li><b><a href="#">诗词集</a></b></li>
+    <li><b><a href="https://chining.github.io/lindayang/poetry/">诗词集</a></b></li>
     <br><br><br>
-    <li><b><a href="#">相册</a></b></li>
-    <br><br><br>
-    <li><b><a href="#">关于作者</a></b></li>
+    <li><b><a href="https://chining.github.io/lindayang/gallery/">相册</a></b></li>
     <br><br><br>
     <li><b><a href="http://chining.github.io/lindayang/contact us/">联系我们</a></b></li>
   </ul>
@@ -33,7 +31,7 @@ user-scalable=no">
 </div>
 
 <article>
-<p>如须转载本网站的任何作品，请发邮件至customer@chining.github.io与本网站管理员取得联系。非法转载一经发现，将作侵权处理。此外，我们欢迎广大读者对本网站提出任何有建设性的意见。</p>
+<p>如须转载本网站的任何作品，请发邮件至contact_lindayang@foxmail.com与本网站管理员取得联系。未经同意转载一经发现，将作侵权处理。此外，我们欢迎广大读者对本网站提出任何有建设性的意见。</p>
 <p>感谢各位网友对本网站的支持与厚爱。</p>
 </article>
 
