--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@ user-scalable=no">
 <h1><b><a href="https://chining.github.io/lindayang/">Linda Yang</a></b></h1>
 </div>
 
-
-
 <div class="transbox">
 <nav>
   <ul>
     <li><b><a href="https://chining.github.io/lindayang/">最新上架</a></b></li>
     <br><br><br>
-    <li><b><a href="#">诗词集</a></b></li>
+    <li><b><a href="https://chining.github.io/lindayang/poetry/">诗词集</a></b></li>
     <br><br><br>
-    <li><b><a href="#">相册</a></b></li>
-    <br><br><br>
-    <li><b><a href="#">关于作者</a></b></li>
+    <li><b><a href="https://chining.github.io/lindayang/gallery/">相册</a></b></li>
     <br><br><br>
     <li><b><a href="http://chining.github.io/lindayang/contact us/">联系我们</a></b></li>
   </ul>
@@ -36,13 +32,13 @@ user-scalable=no">
 
 <article>
 <table>
-<tr><td><img src="DSCN0208.JPG" width="225" height="225"></td>
-    <td><img src="DSCN0208.JPG" width="225" height="225"></td>
-    <td><img src="DSCN0208.JPG" width="225" height="225"></td>
+<tr><td><a href="https://chining.github.io/lingdayang/poetry/07262016/"><img src="Poster.jpg" width="220" height="220"></a></td>
+    <td><img src="DSCN0208.JPG" width="220" height="220"></td>
+    <td><img src="DSCN0208.JPG" width="220" height="220"></td>
 </tr>
-<tr><td><img src="DSCN0208.JPG" width="225" height="225"></td>
-    <td><img src="DSCN0208.JPG" width="225" height="225"></td>
-    <td><img src="DSCN0208.JPG" width="225" height="225"></td>
+<tr><td><img src="DSCN0208.JPG" width="220" height="220"></td>
+    <td><img src="DSCN0208.JPG" width="220" height="220"></td>
+    <td><img src="DSCN0208.JPG" width="220" height="220"></td>
 </tr>
 </table>
 </article>
