--- a/contact us/index.html
+++ b/contact us/index.html
@@ -2,17 +2,19 @@
 <html lang="zh-CN">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, height=device-height,
+  initial-scale=1.0, maximum-scale=1.0; user-scalable=no">
   <title>Contact Us</title>
   <link href="contact us.css" rel="stylesheet">
+  <link rel="icon" href="logo-lindayang.jpg">
 </head>
 
 <body>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0;
-user-scalable=no">
+
 
 <div class="head_child">
-<h1><b><a href="https://chining.github.io/lindayang/">Linda Yang</a></b></h1>
+<h1><img src="logo-lindayang.jpg" alt="logo" style="width:40px;height:40px;">&nbsp;&nbsp;<b><a href="https://chining.github.io/lindayang/">Linda Yang</a></b></h1>
 </div>
 
 <div class="transbox">
@@ -21,9 +23,11 @@ user-scalable=no">
     <li><b><a href="https://chining.github.io/lindayang/">最新上架</a></b></li>
     <br><br><br>
     <li><b><a href="https://chining.github.io/lindayang/poetry/">诗词集</a></b></li>
-    <br><br><br>
+    <br>
+    <br><br>
     <li><b><a href="https://chining.github.io/lindayang/gallery/">相册</a></b></li>
-    <br><br><br>
+    <br>
+    <br><br>
     <li><b><a href="http://chining.github.io/lindayang/contact us/">联系我们</a></b></li>
   </ul>
 </nav>
@@ -33,6 +37,10 @@ user-scalable=no">
 <article>
 <p>如须转载本网站的任何作品，请发邮件至contact_lindayang@foxmail.com与本网站管理员取得联系。未经同意转载一经发现，将作侵权处理。此外，我们欢迎广大读者对本网站提出任何有建设性的意见。</p>
 <p>感谢各位网友对本网站的支持与厚爱。</p>
+<p>If you want to forward any masterpieces posted on chining.github.io/lindayang/, please contact our admin by email contact_lindayang@foxmail.com.</p>
+<p>We are very welcomed any suggestions from you. </p>
+<p>It is really grateful with you. </p>
+<p>Thank you in advance.</p>
 </article>
 
 <footer>
